# autoaim_node_bridge

./: README.md  aimred.sh
app/: aim_senary.py  aim_thread.py  app.py  camera.py  gui.py  senary.py  shake.py  test.py  test_angle.py
install/: local_setup.sh  setup.sh
install/autoaim/share/autoaim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/node_bridge_ros2/lib/node_bridge_ros2/: bridge_ros2
install/node_bridge_ros2/share/node_bridge_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/node_interface/share/node_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/node_interface/share/node_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_node_interface__rosidl_generator_cppExport.cmake  export_node_interface__rosidl_generator_pyExport-noconfig.cmake  export_node_interface__rosidl_generator_pyExport.cmake  export_node_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_node_interface__rosidl_typesupport_fastrtps_cppExport.cmake  node_interfaceConfig.cmake  node_interface__rosidl_typesupport_cExport-noconfig.cmake  node_interface__rosidl_typesupport_cExport.cmake  node_interface__rosidl_typesupport_cppExport-noconfig.cmake  node_interface__rosidl_typesupport_cppExport.cmake  node_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  node_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/node_interface/share/node_interface/msg/: AerialRobotEnergy.idl  BoardAlpha.idl  BoardBeta.idl  ClientCustomGraphicDelete.idl  ClientCustomGraphicDouble.idl  ClientCustomGraphicFive.msg  ClientCustomGraphicSingle.idl  DartClientCmds.idl  DartRemainingTime.idl  DbugData.idl  DbugData.msg  EventData.idl  GameResult.idl  GameRobotPos.idl  GraphicDataType.idl  HealthPoint.msg  IcraBuffDebuffZoneStatus.idl  IcraBuffDebuffZoneStatus.msg  JointCalibration.idl  RefereeWarning.idl  RfidStatus.idl  RobotCommunication.idl  RobotHurt.idl  ShootData.idl
install/node_interface/share/node_interface/srv/: SendAerialRobotEnergy.idl  SendAerialRobotEnergy_Request.msg  SendAutoaimData.idl  SendAutoaimData_Request.msg  SendBoardAlpha_Request.msg  SendBoardBeta.idl  SendBoardBeta_Request.msg  SendBulletRemaining.idl  SendBulletRemaining_Request.msg  SendChassisData.idl  SendClientCustomCharacter.srv  SendClientCustomCharacter_Request.msg  SendClientCustomGraphicDelete.idl  SendClientCustomGraphicDouble.idl  SendClientCustomGraphicDouble_Request.msg  SendClientCustomGraphicFive.idl  SendClientCustomGraphicFive_Request.msg  SendClientCustomGraphicSeven.idl  SendDartClientCmds.idl  SendDartRemainingTime.idl  SendDartStatus.idl  SendDbugData_Request.msg  SendDebugInfo.srv  SendDebugInfo_Request.msg  SendErrorInfo.idl  (+12 more)
log/: latest_build
src/autoaim/: setup.cfg  setup.py
src/autoaim/autoaim/: attrdict.py  helpers.py  toolbox.py
src/autoaim/configs/: aimred.json
src/node_bridge_ros2/: package.xml  setup.cfg  setup.py
src/node_bridge_ros2/node_bridge_ros2/: bridge.py  helpers.py
src/node_interface/: CMakeLists.txt  package.xml
src/node_interface/msg/: ClientCustomGraphicDouble.msg  ClientCustomGraphicSingle.msg  GameStatus.msg
src/node_interface/srv/: SendClientCustomGraphicDouble.srv  SendClientCustomGraphicFive.srv  SendClientCustomGraphicSeven.srv  SendDbugData.srv  SendHealthPoint.srv  SendIcraBuffDebuffZoneStatus.srv
(+629 files in other folders)
